Added underlines somewhere that were missing

--- a/homework1.html
+++ b/homework1.html
@@ -203,7 +203,7 @@
 
 <p>Facebook also contributes to other opensource projects such as Oracle's MySQL database engine.[179][180]</p>
 
-<h2>Website</h2>
+<h2><u>Website</u></h2>
 <p><i>Main articles: Facebook features and Facebook Platform</i></p>
 
 <h3>Technical aspects</h3>
@@ -344,7 +344,7 @@
 <p>In regards to Facebook's mobile usage, per an analyst report in early 2013, there are 192 million Android users, 147 million iPhone users, 48 million iPad users and 56 million messenger users, and a total of 604 million mobile Facebook users.[315] In January 2016, Facebook Messenger hits 800 million users.[316]</p>
 
 <h2><u>Criticisms and controversies</u></h2>
-<p><i>Main article: Criticism of Facebook</i></p>/
+<p><i>Main article: Criticism of Facebook</i></p>
 <h3>Electricity usage</h3>
 <p>On April 21, 2011, Greenpeace released a report showing that of the top ten big brands in cloud computing, Facebook was most reliant on coal for electricity for its data centers. At the time, data centers consumed up to 2% of all global electricity and this amount was projected to increase. Phil Radford of Greenpeace said "we are concerned that this new explosion in electricity use could lock us into old, polluting energy sources instead of the clean energy available today."[319] On December 15, 2011, Greenpeace and Facebook announced together that Facebook would shift to use clean and renewable energy to power its own operations. Marcy Scott Lynn, of Facebook's sustainability program, said it looked forward "to a day when our primary energy sources are clean and renewable" and that the company is "working with Greenpeace and others to help bring that day closer."[320][321]</p>
 
