--- a/homework4.html
+++ b/homework4.html
@@ -46,7 +46,7 @@
 
 	<tr>
 		<td>Плата и надоместоци на плата од работен однос и исплата по основ
-на деловна успешност на работодавачот на кои се платени придонеси	1</td>
+на деловна успешност на работодавачот на кои се платени придонеси</td>
 		<td><input type="number"/></td>
 		<td><input type="number"/></td>
 		<td><input type="number"/></td>
@@ -84,7 +84,7 @@
 Дополнителни примања и надоместоци на трошоци од работен однос на кои
 не се платени придонеси</td>
 		<td><input type="number"/></td>
-		<td><input type="number"/></td>
+		<td></td>
 		<td><input type="number"/></td>
 	</tr>
 
@@ -99,7 +99,7 @@
 		<td>Примања на членови на органите на управување и на органите на надзор во
 трговските друштва</td>
 		<td><input type="number"/></td>
-		<td><input type="number"/></td>
+		<td></td>
 		<td><input type="number"/></td>
 	</tr>
 
@@ -107,7 +107,7 @@
 		<td>Примања на функционери, пратеници, советници и други носители на јавни
 функции</td>
 		<td><input type="number"/></td>
-		<td><input type="number"/></td>
+		<td></td>
 		<td><input type="number"/></td>
 	</tr>
 
@@ -115,21 +115,21 @@
 		<td>Надоместоци за работа на судии поротници, вешти лица и стечајни управници
 кои немаат својство на вработени лица во соодветните институции или друштва</td>
 		<td><input type="number"/></td>
-		<td><input type="number"/></td>
+		<td></td>
 		<td><input type="number"/></td>
 	</tr>
 
 	<tr>
 		<td>Надоместоци на членови на Македонска академија на науките и уметностите</td>
 		<td><input type="number"/></td>
-		<td><input type="number"/></td>
+		<td></td>
 		<td><input type="number"/></td>
 	</tr>
 
 	<tr>
 		<td>Примања по основ на договор за повремено или привремено вршење на услуги</td>
 		<td><input type="number"/></td>
-		<td><input type="number"/></td>
+		<td></td>
 		<td><input type="number"/></td>
 	</tr>
 
@@ -151,21 +151,21 @@
 		<td>Дивиденди и други приходи остварени со учество во добивката кај правни и
 физички лица</td>
 		<td><input type="number"/></td>
-		<td><input type="number"/></td>
+		<td></td>
 		<td><input type="number"/></td>
 	</tr>
 
 	<tr>
 		<td>Камати за кои постои обврска за плаќање на данок</td>
 		<td><input type="number"/></td>
-		<td><input type="number"/></td>
+		<td></td>
 		<td><input type="number"/></td>
 	</tr>
 
 	<tr>
 		<td>Добивки од игри на среќа и други наградни игри</td>
 		<td><input type="number"/></td>
-		<td><input type="number"/></td>
+		<td></td>
 		<td><input type="number"/></td>
 	</tr>
 
@@ -179,7 +179,7 @@
 	<tr>
 		<td>Други приходи на кои аконтацијата на данокот не се плаќа по одбивка</td>
 		<td><input type="number"/></td>
-		<td><input type="number"/></td>
+		<td></td>
 		<td><input type="number"/></td>
 	</tr>
 
@@ -207,16 +207,16 @@
 	<tr>
 		<td>Даночно ослободување по основ на донации во висина од 20% од годишниот
 даночен долг, но не повеќе од 24.000 денари</td>
+		<td></td>
 		<td><input type="number"/></td>
-		<td><input type="number"/></td>
-		<td><input type="number"/></td>
+		<td></td>
 	</tr>
 
 	<tr>
 		<td>Искористено даночно ослободување при аконтативно оданочување</td>
+		<td></td>
 		<td><input type="number"/></td>
-		<td><input type="number"/></td>
-		<td><input type="number"/></td>
+		<td></td>
 	</tr>
 
 	<tr>
