--- a/homework6nav.html
+++ b/homework6nav.html
@@ -52,11 +52,11 @@
 	<br></br>
 
 	<nav class="nave">
-		<a id="1" href="#">Link 1</a>
-		<a id="2" href="#">Link 2</a>
-		<a id="3" href="#">Link 3</a>
-		<a id="4" href="#">Link 4</a>
-		<a id="5" href="#">Link 5</a>
+		<a href="#">Link 1</a>
+		<a href="#">Link 2</a>
+		<a href="#">Link 3</a>
+		<a href="#">Link 4</a>
+		<a href="#">Link 5</a>
 		<span></span>
 	</nav>
 
