Pictures with absolute and relative position added

--- a/homework7engadget.html
+++ b/homework7engadget.html
@@ -68,7 +68,11 @@
 	<div class="containertwo">
 		<h2>The Latest</h2>
 		<div class="left">
-			<div class="leftfirst"></div>
+			<div class="drz">
+				<div class="leftfirst">
+					<div class="leftboxmalo"></div>
+				</div>
+			</div>
 			<div class="leftsecond">
 				<div class="lso"></div>
 				<div class="lstt"></div>
