some borders plus

--- a/homework8layout.html
+++ b/homework8layout.html
@@ -60,7 +60,7 @@
 					<a href="#">Map</a>
 				</nav>
 				<div class="hotel">
-					<img src="media/images/sydney.jpg"/>
+					<img class="bigimg" src="media/images/sydney.jpg"/>
 					<img src="media/images/1.jpg"/>
 					<img src="media/images/2.jpg"/>
 					<img src="media/images/3.jpg"/>
