Newer update on the design

--- a/homework8layout.html
+++ b/homework8layout.html
@@ -37,7 +37,59 @@
 				</div>
 				<div class="lefttwo">
 					<div class="eden"></div>
-					<div class="dva"></div>
+					<div class="calendar">
+						<header>
+							<button class="left">&lt;</button>
+							<span class="month">January</span>
+							<button class="right">&gt;</button>
+						</header>
+						<div class="body">
+							<ul>
+								<li class="header">m</li>
+								<li class="header">t</li>
+								<li class="header">w</li>
+								<li class="header">t</li>
+								<li class="header">f</li>
+								<li class="header">s</li>
+								<li class="header">s</li>
+								<li class="days">1</li>
+								<li class="days">2</li>
+								<li class="days">3</li>
+								<li class="days">4</li>
+								<li class="days">5</li>
+								<li class="days">6</li>
+								<li class="days">7</li>
+								<li class="days">8</li>
+								<li class="days">9</li>
+								<li class="days">10</li>
+								<li class="days">11</li>
+								<li class="days">12</li>
+								<li class="days">13</li>
+								<li class="days">14</li>
+								<li class="days">15</li>
+								<li class="days">16</li>
+								<li class="days">17</li>
+								<li class="days">18</li>
+								<li class="days">19</li>
+								<li class="days">20</li>
+								<li class="days">21</li>
+								<li class="days">22</li>
+								<li class="days">23</li>
+								<li class="days">24</li>
+								<li class="days">25</li>
+								<li class="days">26</li>
+								<li class="days">27</li>
+								<li class="days">28</li>
+								<li class="days">29</li>
+								<li class="days">30</li>
+								<li class="days">31</li>
+								<li class="next-month">1</li>
+								<li class="next-month">2</li>
+								<li class="next-month">3</li>
+								<li class="next-month">4</li>
+							</ul>
+						</div>
+					</div>
 					<div class="tri"></div>
 				</div>
 		</div>
@@ -71,43 +123,48 @@
 				<div class="inputpolinja">
 					<div class="prvi3">
 						<div class="prvred">
-							<input type="text" name="Text"/>
-							<input type="checkbox" name="">
-							<input type="checkbox" name="">
-							<button></button>
+							<input class="text1" type="text" placeholder="Text"/>
+							<input class="checkbox1" type="checkbox" name="">
+							<input class="checkbox2" type="radio" name="">
+							<button>Button</button>
 						</div>
 						<div class="vtorred">	
-							<input type="text" name="Over"/>
-							<input type="checkbox" name="">
-							<input type="checkbox" name="">
-							<button></button>
+							<input class="text2" type="text" placeholder="Over"/>
+							<input class="checkbox3" type="checkbox" name="">
+							<input class="checkbox4" type="radio" name="">
+							<button>Over</button>
 						</div>
 						<div class="tretred">
-							<input type="text" name="Active"/>
-							<input type="checkbox" name="">
-							<input type="checkbox" name="">
-							<button></button>
+							<input class="text3" type="text" placeholder="Active"/>
+							<input class="checkbox5" type="checkbox" name="">
+							<input class="checkbox6" type="radio" name="">
+							<button>Active</button>
 						</div>
 					</div>
 					<div>
 						<div>
-							<textarea></textarea>
+							<textarea>Text Area</textarea>
 						</div>
-						<div>
-							<select>
+						<div class="selectholder">
+							<select class="selection">
 								<option value="mk">Selection</option>
 								<option value="us">1</option>
 								<option value="uk">2</option>
 							</select>
-							<select>
+							<select class="over">
 								<option value="mk">Over</option>
 								<option value="us">1</option>
 								<option value="uk">2</option>
 							</select>
 						</div>
+						<span class="cleaner"></span>
 					</div>
 					<div>
 					<input type="range" min="10" max="20" step="0.1" value="$562" />
+					<div class="searchbar">
+						<input type="search" name="">
+						<img src="media/images/searchlupa.png">
+					</div>
 					</div>
 				</div>
 			</div>	
